--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "moment-timezone": "^0.5.46",
     "mongodb": "^6.9.0"
   }
 }
